# iracing-setup-downloader

./: .env.example  .gitignore  .pre-commit-config.yaml  CDA.MD  GOFast.MD  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CLI_IMPLEMENTATION.md  CLI_QUICK_REFERENCE.md  CLI_USAGE.md  downloader.md
examples/: cars.json  cli_example.py  cli_usage.sh  downloader_usage.py  state_usage.py  tracks.json
examples/Coach Dave/: example.series.json
examples/GO Fast/: example.json
src/iracing_setup_downloader/: __init__.py  cli.py  config.py  deduplication.py  downloader.py  models.py  organizer.py  state.py  track_matcher.py  utils.py
src/iracing_setup_downloader/data/: tracks.json
src/iracing_setup_downloader/providers/: __init__.py  base.py  cda.py  gofast.py  tracktitan.py
tests/: __init__.py  conftest.py  test_cda_provider.py  test_cli.py  test_config.py  test_deduplication.py  test_downloader.py  test_gofast_provider.py  test_models.py  test_organizer.py  test_state.py  test_track_matcher.py  test_tracktitan_provider.py  test_utils.py
