[tool.poetry]
name = "iracing-setup-downloader"
version = "0.1.0"
description = "A CLI tool for downloading iRacing setups from various providers"
authors = ["elderfo"]
readme = "README.md"
packages = [{ include = "iracing_setup_downloader", from = "src" }]
include = [
    { path = "src/iracing_setup_downloader/data/*.json", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.15.0"
aiohttp = "^3.11.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
rich = "^13.9.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
ruff = "^0.9.0"
pre-commit = "^4.0.0"

[tool.poetry.scripts]
iracing-setup-downloader = "iracing_setup_downloader.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B027",   # empty method in abstract base class (intentional for optional methods)
    "B008",   # function call in argument defaults (required for Typer CLI)
]

[tool.ruff.lint.isort]
known-first-party = ["iracing_setup_downloader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "-ra",
]
